Basic MonoGame project

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 ################################################################################
 
 *.ide
+*.ide-shm
+*.lock
+*.ide-wal
+*.cache
+*.cs
